@@ -10,3 +10,24 @@ Run `grunt` for building and `grunt serve` for preview.
 ## Testing
 
 Running `grunt test` will run the unit tests with karma.
+
+## Step to setup
+
+* Pull project
+* Run `npm install`
+* Run `bower install`
+* Create batch file with this command (modify the path point to proper location 
+```
+set JAVA_HOME=C:\jdk1.7.0_25
+set JAVA_OPTS=-Xms512m -Xmx512m -XX:MaxPermSize=256m
+set no_proxy=127.0.0.1, localhost
+set PATH=%JAVA_HOME%\bin;%M3_HOME%\bin;%PATH%;C:\Tools\Git\bin;C:\Tools\nodejs;C:\Tools\Ruby21\bin;%APPDATA%\npm
+d:
+cd D:\source\
+cmd
+cls
+exit
+```
+* Run `grunt serve`
+* In the browser that has just opened, go to [login page](http://localhost:9000/#/login)
+* 
